--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,11 @@ h6 {
   font-family: "Raleway", sans-serif;
 }
 
+h6 {
+text-align: center;
+margin-top: 10px;
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
