--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,7 @@ margin-top: 10px;
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/pexels-photo-3705687.jpeg") top center;
   background-size: cover;
 }
 
